--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="js/script.js" defer></script>
   </head>
   <body>
+    <button class="btn btn-pixel" type="button">Squares per side</button>
     <div class="container"></div>
   </body>
 </html>
