--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Etch a sketch</title>
+    <title>Etch A Sketch</title>
     <link rel="stylesheet" href="css/styles.css" />
     <script src="js/script.js" defer></script>
   </head>
   <body>
-    <button class="btn btn-pixel" type="button">Squares per side</button>
-    <div class="container"></div>
+    <div class="container-big">
+      <h1 class="title">Etch A Sketch</h1>
+      <div class="container-body">
+        <button class="btn btn-pixel" type="button">Squares per side</button>
+        <div class="container-grid"></div>
+      </div>
+    </div>
   </body>
 </html>
