--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Etch A Sketch</title>
+    <!-- FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cabin+Sketch:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="css/styles.css" />
     <script src="js/script.js" defer></script>
   </head>
@@ -12,8 +20,10 @@
     <div class="container-big">
       <h1 class="title">Etch A Sketch</h1>
       <div class="container-body">
-        <button class="btn btn-pixel" type="button">Squares per side</button>
         <div class="container-grid"></div>
+        <div>
+          <button class="btn btn-pixel" type="button">Squares per side</button>
+        </div>
       </div>
     </div>
   </body>
