--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <div class="container-grid"></div>
         <div>
           <button class="btn btn-pixel" type="button">Squares per side</button>
+          <button class="btn btn-rainbow" type="button">Rainbow</button>
         </div>
       </div>
     </div>
