--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <h1 class="title">Etch A Sketch</h1>
       <div class="container-body">
         <div class="container-grid"></div>
-        <div>
+        <div class="container-buttons">
           <button class="btn btn-pixel" type="button">Squares per side</button>
           <button class="btn btn-rainbow" type="button">Rainbow</button>
         </div>
