Add Clear button

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <div class="container-buttons">
           <button class="btn btn-pixel" type="button">Squares per side</button>
           <button class="btn btn-rainbow" type="button">Rainbow</button>
+          <button class="btn btn-clear" type="button">Clear</button>
         </div>
       </div>
     </div>
