--- a/index.html
+++ b/index.html
@@ -22,7 +22,15 @@
       <div class="container-body">
         <div class="container-grid"></div>
         <div class="container-buttons">
-          <button class="btn btn-pixel" type="button">Squares per side</button>
+          <label for="pixel-size" class="label">Number of pixels</label>
+          <input
+            type="range"
+            id="pixel-size"
+            class="pixel-size"
+            min="1"
+            max="25"
+            value="5"
+          />
           <button class="btn btn-rainbow" type="button">Rainbow</button>
           <button class="btn btn-clear" type="button">Clear</button>
         </div>
