Add Eraser button

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             value="5"
           />
           <button class="btn btn-rainbow" type="button">Rainbow</button>
+          <button class="btn btn-erase">Eraser</button>
           <button class="btn btn-clear" type="button">Clear</button>
         </div>
       </div>
