Add color picker

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="container-body">
         <div class="container-grid"></div>
         <div class="container-buttons">
-          <label for="pixel-size" class="label">Number of pixels</label>
+          <label for="pixel-size" class="label">Number of pixels:</label>
           <input
             type="range"
             id="pixel-size"
@@ -30,6 +30,12 @@
             min="1"
             max="25"
             value="5"
+          />
+          <input
+            type="color"
+            id="color-picker"
+            class="color-picker"
+            value="#323232"
           />
           <button class="btn btn-rainbow" type="button">Rainbow</button>
           <button class="btn btn-erase">Eraser</button>
