--- a/index.html
+++ b/index.html
@@ -22,15 +22,17 @@
       <div class="container-body">
         <div class="container-grid"></div>
         <div class="container-buttons">
-          <label for="pixel-size" class="label">Number of pixels:</label>
-          <input
-            type="range"
-            id="pixel-size"
-            class="pixel-size"
-            min="1"
-            max="25"
-            value="5"
-          />
+          <div class="input-range">
+            <label for="pixel-size" class="label">Number of pixels</label>
+            <input
+              type="range"
+              id="pixel-size"
+              class="pixel-size"
+              min="1"
+              max="25"
+              value="5"
+            />
+          </div>
           <input
             type="color"
             id="color-picker"
